@@ -24,7 +24,7 @@ class AppConfig:
 
     ENV: str = "development"
     OLLAMA_URL: str = "http://localhost:11434/api"
-    OLLAMA_VERIFY: bool = True
+    OTERM_VERIFY_SSL: bool = True
 
     def __init__(self, env):
         for field in self.__annotations__:
